@@ -3,43 +3,36 @@ package PAI.controllerRest;
 import PAI.VOs.Acronym;
 import PAI.VOs.NameWithNumbersAndSpecialChars;
 import PAI.VOs.ProgrammeID;
-import PAI.assembler.programmeEdition.IProgrammeEditionAssembler;
 import PAI.assembler.programmeEdition.IProgrammeEditionControllerAssembler;
-import PAI.domain.programmeEdition.ProgrammeEdition;
 import PAI.dto.programmeEdition.CountStudentsDto;
 import PAI.dto.programmeEdition.ProgrammeEditionDTO;
+import PAI.dto.programmeEdition.ProgrammeEditionRequestDTO;
+import PAI.dto.programmeEdition.ProgrammeEditionResponseDTO;
 import PAI.service.programmeEdition.IProgrammeEditionService;
+import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/programmeeditions")
 public class ProgrammeEditionRestController {
 
     private final IProgrammeEditionService programmeEditionService;
-    private final IProgrammeEditionAssembler programmeEditionAssembler;
     private final IProgrammeEditionControllerAssembler programmeEditionControllerAssembler;
 
-    public ProgrammeEditionRestController(IProgrammeEditionService programmeEditionService, IProgrammeEditionAssembler programmeEditionAssembler, IProgrammeEditionControllerAssembler programmeEditionControllerAssembler) {
+    public ProgrammeEditionRestController(IProgrammeEditionService programmeEditionService, IProgrammeEditionControllerAssembler programmeEditionControllerAssembler) {
         if (programmeEditionService == null) {
             throw new IllegalArgumentException("ProgrammeEdition service cannot be null");
-        }
-        if (programmeEditionAssembler == null) {
-            throw new IllegalArgumentException("ProgrammeEdition assembler cannot be null");
         }
         if (programmeEditionControllerAssembler == null) {
             throw new IllegalArgumentException("ProgrammeEdition Controller Assembler cannot be null");
         }
 
         this.programmeEditionService = programmeEditionService;
-        this.programmeEditionAssembler = programmeEditionAssembler;
         this.programmeEditionControllerAssembler = programmeEditionControllerAssembler;
     }
 
@@ -74,14 +67,25 @@ public class ProgrammeEditionRestController {
                 new Acronym(programmeAcronym)
         );
 
-        List<ProgrammeEdition> programmeEditions = programmeEditionService.getProgrammeEditionsByProgrammeID(programmeID);
-
-        List<ProgrammeEditionDTO> dtos = programmeEditions.stream()
-                .map(pe -> programmeEditionAssembler.toDTO(pe.identity().getProgrammeID(), pe.identity().getSchoolYearID()))
-                .collect(Collectors.toList());
+        List<ProgrammeEditionDTO> dtos = programmeEditionService
+                .getProgrammeEditionIDsByProgrammeID(programmeID)
+                .stream()
+                .map(id -> programmeEditionControllerAssembler.toDTOFromIDs(id.getProgrammeID(), id.getSchoolYearID()))
+                .toList();
 
         return ResponseEntity.ok(dtos);
     }
 
+    @PostMapping()
+    public ResponseEntity<?> createAProgrammeEditionForTheCurrentSchoolYear(@Valid @RequestBody ProgrammeEditionRequestDTO requestDto) {
+        try {
+            ProgrammeEditionDTO programmeEditionDTO = programmeEditionControllerAssembler.toDTO(requestDto);
+            ProgrammeEditionDTO serviceResult = programmeEditionService.createProgrammeEditionAndSave(programmeEditionDTO);
+            ProgrammeEditionResponseDTO response = programmeEditionControllerAssembler.toResponseDTO(serviceResult);
+            return new ResponseEntity<>(response, HttpStatus.CREATED);
+        } catch (Exception e) {
+            return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
+        }
+    }
 }
 
